DK: Added IPriceFinder

--- a/src/Kata.ShoppingCart.Unit.Tests/Kata.ShoppingCart.Unit.Tests.csproj
+++ b/src/Kata.ShoppingCart.Unit.Tests/Kata.ShoppingCart.Unit.Tests.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CheckoutTests.cs" />
+    <Compile Include="CheckoutPriceFinderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
