--- a/src/Kata.ShoppingCart/Kata.ShoppingCart.csproj
+++ b/src/Kata.ShoppingCart/Kata.ShoppingCart.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Checkout.cs" />
+    <Compile Include="CheckoutPriceFinderTests.cs" />
     <Compile Include="IDiscounter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
