--- a/src/Kata.ShoppingCart/Kata.ShoppingCart.csproj
+++ b/src/Kata.ShoppingCart/Kata.ShoppingCart.csproj
@@ -43,10 +43,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CartItem.cs" />
-    <Compile Include="CartItemView.cs" />
     <Compile Include="Checkout.cs" />
     <Compile Include="CheckoutPriceFinderTests.cs" />
     <Compile Include="IDiscounter.cs" />
+    <Compile Include="PriceRules.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
